Refactor: Add attribution to code used from external sources

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   </header>
   <section id="hero-section">
     <div id="hero-img-container">
+      <!-- Credit: hero-blob.svg generated using tool from softr -
+        https://www.softr.io/tools/svg-wave-generator -->
       <img src="assets/images/hero-blob.svg" class="hero-img-bg" alt="">
       <img src="assets/images/hero-time.svg" class="hero-img-fg" alt="">
     </div>
@@ -45,6 +47,8 @@
       </a>
     </div>
   </section>
+  <!-- Credit: wave.svg generated using tool from softr - 
+    https://www.softr.io/tools/svg-wave-generator -->
   <img id="wave" src="assets/images/wave.svg" alt="">
   <section id="services-section">
     <h2 class="section-heading">How we can help you?</h2>
@@ -260,6 +264,7 @@
       </form>
     </div>
   </section>
+  <!-- Credit: Model adapted from example by Timothy Long - https://codepen.io/timothylong/pen/HhAer/ -->
   <div id="open-modal" class="modal-window">
     <div>
       <h2>Message sent!</h2>
