--- a/why-content-marketing.html
+++ b/why-content-marketing.html
@@ -31,8 +31,14 @@
   <section id="video-section">
     <h2 class="section-heading">Why invest in content marketing?</h2>
     <div id="video-content">
-      <div class="embedtool"><iframe title="Content Marketing Explained (video)" src="https://www.youtube.com/embed/dMkOrLriJUQ"
-          allowfullscreen></iframe></div>
+      <!-- Credit: Responsive YouTube embed code from ilmigo - 
+        https://www.ilmigo.com/tools/responsive-youtube-embed-code-generator/ -->
+      <div class="embedtool">
+        <iframe title="Content Marketing Explained (video)" 
+        src="https://www.youtube.com/embed/dMkOrLriJUQ"
+        allowfullscreen>
+      </iframe>
+    </div>
       <h3 class="section-heading">See what we can offer..</h3>
       <a role="button" href="./#services-section" class="std-btn">Services</a>
     </div>
