Refactor: Correct typo in testimonial section

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </a>
   </section>
   <section id="testimonials-section">
-    <h2 class="section-heading">What Customer say about us</h2>
+    <h2 class="section-heading">What Customers say about us</h2>
     <div class="team-container">
       <div class="team-container">
         <div class="team-item team-item-content">
