Refactor: Correct typos

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </a>
   </section>
   <section id="testimonials-section">
-    <h2 class="section-heading">What Customers say about us</h2>
+    <h2 class="section-heading">What our customers say about us</h2>
     <div class="team-container">
       <div class="team-container">
         <div class="team-item team-item-content">
@@ -206,7 +206,7 @@
           <p class="team-item-content-intro">
             <em>
               <b>"</b>
-              Working with the team at ContentKarma has been a joy! They helped
+              Working with the team at Content Karma has been a joy! They helped
               strengthen my brand recognition by producing content my customers
               love to share.
               <b>"</b>
