Refractor: Rename wave.svg to section-separator.svg

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   </header>
   <section id="hero-section">
     <div id="hero-img-container">
-      <!-- Credit: hero-blob.svg generated using tool from softr -
-        https://www.softr.io/tools/svg-wave-generator -->
+      <!-- Credit: SVG generated using tool from softr -
+        https://www.softr.io/tools/svg-shape-generator -->
       <img src="assets/images/hero-blob.svg" class="hero-img-bg" alt="">
       <img src="assets/images/hero-time.svg" class="hero-img-fg" alt="">
     </div>
@@ -47,9 +47,9 @@
       </a>
     </div>
   </section>
-  <!-- Credit: wave.svg generated using tool from softr - 
+  <!-- Credit: SVG generated using tool from softr - 
     https://www.softr.io/tools/svg-wave-generator -->
-  <img id="wave" src="assets/images/wave.svg" alt="">
+  <img id="section-separator" src="assets/images/section-separator.svg" alt="">
   <section id="services-section">
     <h2 class="section-heading">How we can help you?</h2>
     <div id="services-container">
