Feat: Add telephone number input to form

--- a/index.html
+++ b/index.html
@@ -250,6 +250,8 @@
         <input type="text" name="full-name" id="full-name" placeholder="Enter your name.." required>
         <label for="email">Email Address:</label>
         <input type="email" name="email" id="email" placeholder="Enter your email address.." required>
+        <label for="phone-number">Phone Number (optional):</label>
+        <input type="tel" name="phone-number" id="phone-number" placeholder="+441234123456">
         <label for="subject">Subject:</label>
         <select id="subject" name="subject" required>
           <option value="">-- Please select an option --</option>
