--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
     </div>
     <h3 class="section-heading">Why is content marketing important for your business?</h3>
-    <a role="button" href="why-content-marketing.html" class="std-btn">
+    <a role="button" href="why-invest.html" class="std-btn">
       Find out!
     </a>
   </section>
