Fix: Update link to homepage

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   <section id="not-found">
     <img src="assets/images/page-not-found.svg" alt="">
     <h3>Let's get you back to the good stuff..</h3>
-    <a role="button" href="." class="std-btn">
+    <a role="button" href="https://ianmeigh.github.io/content-karma/" class="std-btn">
       Home
     </a>
   </section>
