Refactor: Update team and testimonial section class names
Rename classes to reflect shared use in different sections.

--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
   </section>
   <section id="team-section">
     <h2 class="section-heading">Meet the team!</h2>
-    <div class="team-container">
-      <div class="team-item">
-        <div class="team-item-content">
-          <img class="team-item-content-image" src="assets/images/team-lilly.png" alt="">
-          <p class="team-item-content-name">Lilly Stone</p>
-          <p class="team-item-content-role">Brand Manager</p>
-          <p class="team-item-content-intro">
+    <div class="people-container">
+      <div class="people-item">
+        <div class="people-item-content">
+          <img class="people-item-content-image" src="assets/images/team-lilly.png" alt="">
+          <p class="people-item-content-name">Lilly Stone</p>
+          <p class="people-item-content-role">Brand Manager</p>
+          <p class="people-item-content-intro">
             I look after your brand and ensure our work is always consistent
             with your vision.
           </p>
         </div>
-        <div class="team-item-socials">
+        <div class="people-item-socials">
           <a href="https://twitter.com" target="_blank" rel="noopener
           noreferrer" aria-label="Link to Twitter page of Lilly Stone,
           Content Karma Brand Manager, (opens in a new window).">
@@ -119,17 +119,17 @@
           </a>
         </div>
       </div>
-      <div class="team-item">
-        <div class="team-item-content">
-          <img class="team-item-content-image" src="assets/images/team-paul.png" alt="">
-          <p class="team-item-content-name">Paul Smith</p>
-          <p class="team-item-content-role">Staff Writer</p>
-          <p class="team-item-content-intro">
+      <div class="people-item">
+        <div class="people-item-content">
+          <img class="people-item-content-image" src="assets/images/team-paul.png" alt="">
+          <p class="people-item-content-name">Paul Smith</p>
+          <p class="people-item-content-role">Staff Writer</p>
+          <p class="people-item-content-intro">
             As the resident writer of content, my passion is to tell stories
             your audience will love.
           </p>
         </div>
-        <div class="team-item-socials">
+        <div class="people-item-socials">
           <a href="https://medium.com/" target="_blank" rel="noopener
           noreferrer" aria-label="Link to Medium page of Paul Smith, Content
           Karma Staff Writer, (opens in a new window).">
@@ -198,12 +198,12 @@
   </section>
   <section id="testimonials-section">
     <h2 class="section-heading">What our customers say about us</h2>
-    <div class="team-container">
-      <div class="team-container">
-        <div class="team-item team-item-content">
-          <img class="team-item-content-image" src="assets/images/testimonials-jennifer.png" alt="">
-          <p class="team-item-content-name">Jennifer Walters</p>
-          <p class="team-item-content-intro">
+    <div class="people-container">
+      <div class="people-container">
+        <div class="people-item people-item-content">
+          <img class="people-item-content-image" src="assets/images/testimonials-jennifer.png" alt="">
+          <p class="people-item-content-name">Jennifer Walters</p>
+          <p class="people-item-content-intro">
             <em>
               <b>"</b>
               Working with the team at Content Karma has been a joy! They helped
@@ -213,10 +213,10 @@
             </em>
           </p>
         </div>
-        <div class="team-item team-item-content">
-          <img class="team-item-content-image" src="assets/images/testimonials-jordan.png" alt="">
-          <p class="team-item-content-name">Jordan O'Keefe</p>
-          <p class="team-item-content-intro">
+        <div class="people-item people-item-content">
+          <img class="people-item-content-image" src="assets/images/testimonials-jordan.png" alt="">
+          <p class="people-item-content-name">Jordan O'Keefe</p>
+          <p class="people-item-content-intro">
             <em>
               <b>"</b>
               Perfect content every time! My ROI was so quick as the team helped
@@ -225,10 +225,10 @@
             </em>
           </p>
         </div>
-        <div class="team-item team-item-content">
-          <img class="team-item-content-image" src="assets/images/testimonials-monica.png" alt="">
-          <p class="team-item-content-name">Monica Rambeau</p>
-          <p class="team-item-content-intro">
+        <div class="people-item people-item-content">
+          <img class="people-item-content-image" src="assets/images/testimonials-monica.png" alt="">
+          <p class="people-item-content-name">Monica Rambeau</p>
+          <p class="people-item-content-intro">
             <em>
               <b>"</b>
               I was struggling to keep up with the admin of my growing business
