Refactor: Rename sections
Remove '-section' appended to the section name.

fixes issue #1

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </a>
     <nav id="navigation-container">
       <ul>
-        <li><a href="#services-section">Services</a></li>
-        <li><a href="#team-section">Team</a></li>
-        <li><a href="#pricing-section">Pricing</a></li>
-        <li><a href="#testimonials-section">Testimonials</a></li>
-        <li><a href="#contact-section">Contact</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -42,7 +42,7 @@
         We produce content to get your audience engaged, leaving you free to grow
         your business.
       </p>
-      <a role="button" href="#contact-section" class="std-btn">
+      <a role="button" href="#contact" class="std-btn">
         Contact us!
       </a>
     </div>
@@ -50,7 +50,7 @@
   <!-- Credit: SVG generated using tool from softr - 
     https://www.softr.io/tools/svg-wave-generator -->
   <img id="section-separator" src="assets/images/section-separator.svg" alt="">
-  <section id="services-section">
+  <section id="services">
     <h2 class="section-heading">How we can help you?</h2>
     <div id="services-container">
       <div class="service-item">
@@ -93,7 +93,7 @@
       Find out!
     </a>
   </section>
-  <section id="team-section">
+  <section id="team">
     <h2 class="section-heading">Meet the team!</h2>
     <div class="people-container">
       <div class="people-item">
@@ -144,7 +144,7 @@
       </div>
     </div>
   </section>
-  <section id="pricing-section">
+  <section id="pricing">
     <h2 class="section-heading">We offer content packages!</h2>
     <div id="pricing-container">
       <div class="pricing-item">
@@ -192,11 +192,11 @@
       </div>
     </div>
     <h3 class="section-heading">Not what you are looking for?</h3>
-    <a role="button" href="#contact-section" class="std-btn">
+    <a role="button" href="#contact" class="std-btn">
       Request Quote
     </a>
   </section>
-  <section id="testimonials-section">
+  <section id="testimonials">
     <h2 class="section-heading">What our customers say about us</h2>
     <div class="people-container">
       <div class="people-container">
@@ -242,7 +242,7 @@
       </div>
     </div>
   </section>
-  <section id="contact-section">
+  <section id="contact">
     <h2 class="section-heading">Get in touch</h2>
     <div id="contact-container">
       <form action="#open-modal">
