Style: Add hover state to footer social icons
Change colour to match social sites branding.

fixes #3

--- a/why-invest.html
+++ b/why-invest.html
@@ -48,7 +48,7 @@
       <img class="logo-img" src="assets/images/logo-101x150.png" alt="">
       <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
     </a>
-    <div id="footer-socials">
+    <div class="footer-socials">
       <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
       aria-label="Link to Twitter page of Content Karma, (opens in a new
       window).">
