Fix: Update link to services section on why-invest page

--- a/why-invest.html
+++ b/why-invest.html
@@ -40,7 +40,7 @@
       </iframe>
     </div>
       <h3 class="section-heading">See what we can offer..</h3>
-      <a role="button" href="./#services-section" class="std-btn">Services</a>
+      <a role="button" href="./#services" class="std-btn">Services</a>
     </div>
   </section>
   <footer>
