Style: Change form section spacing
Form made more visually appealing and more cohesive with the sites
design. The sections margin and padding have been increased to make
them more distinctive from each other.

fixes 4, fixes 2

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <img id="section-separator" src="assets/images/section-separator.svg" alt="">
   <section id="services">
     <h2 class="section-heading">How we can help you?</h2>
-    <div id="services-container">
+    <div id="services-container" class="margin-bottom">
       <div class="service-item">
         <img class="service-item-img" src="assets/images/service-social.svg" alt="">
         <h3>Social Media</h3>
@@ -146,7 +146,7 @@
   </section>
   <section id="pricing">
     <h2 class="section-heading">We offer content packages!</h2>
-    <div id="pricing-container">
+    <div id="pricing-container" class="margin-bottom">
       <div class="pricing-item">
         <div class="pricing-item-heading">
           <span class="pricing-item-heading-title">Starter</span>
@@ -254,7 +254,7 @@
         <input type="tel" name="phone-number" id="phone-number" placeholder="+441234123456">
         <label for="subject">Subject:</label>
         <select id="subject" name="subject" required>
-          <option value="">-- Please select an option --</option>
+          <option value="">-- Please select a subject --</option>
           <option value="general-enquiry">General Enquiry</option>
           <option value="request-quote">Request Quote</option>
           <option value="discuss-packages">Discuss Packages</option>
