Refactor: Change pricing section wording

--- a/index.html
+++ b/index.html
@@ -178,12 +178,11 @@
       </div>
       <div class="pricing-item">
         <div class="pricing-item-heading">
-          <span class="pricing-item-heading-title">Super</span>
-          <span class="pricing-item-heading-cost">£700+</span>
+          <span class="pricing-item-heading-title">Brand</span>
+          <span class="pricing-item-heading-cost">£250</span>
         </div>
         <div class="pricing-item-details">
           <ul>
-            <li>All items in the Popular package +</li>
             <li>Website copy review and recommendations</li>
             <li>Website SEO Review</li>
             <li>Creation/Review of a style guide for your brand</li>
