--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://ianmeigh.github.io/content-karma/assets/css/style.css" />
+  <link rel="shortcut icon" href="https://ianmeigh.github.io/content-karma/assets/images/favicon.ico" type="image/x-icon">
   <title>Content Karma - Page Not Found</title>
 </head>
 <body>
