--- a/why-invest.html
+++ b/why-invest.html
@@ -8,6 +8,7 @@
   <meta name="description"
     content="Content Karma is a provider of content writing services for small to medium businesses." />
   <meta name="keywords" content="content karma, content marketing, content solutions, writing services" />
+  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css" />
   <title>Content Karma</title>
 </head>
