Fix: Update link to 404 image

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <section id="not-found">
-    <img src="assets/images/page-not-found.svg" alt="">
+    <img src="https://ianmeigh.github.io/content-karma/assets/images/page-not-found.svg" alt="">
     <h3>Let's get you back to the good stuff..</h3>
     <a role="button" href="https://ianmeigh.github.io/content-karma/" class="std-btn">
       Home
