Feat: Add scroll to top button
The javascript code is taken from a w3schools.com tutorial and the
styling has been adapted.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
   <!-- Credit: SVG generated using tool from softr - 
     https://www.softr.io/tools/svg-wave-generator -->
   <img id="section-separator" src="assets/images/section-separator.svg" alt="">
+  <!-- Credit: Code adapted from from w3schools tutorial - Scroll Back To Top Button:
+    https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
+  <button onclick="topFunction()" id="back-to-top-btn" class="std-btn" title="Go to top of page">
+    <i class="fas fa-chevron-up"></i>
+  </button>
   <section id="services">
     <h2 class="section-heading">How we can help you?</h2>
     <div id="services-container" class="margin-bottom">
@@ -259,7 +264,7 @@
           <option value="discuss-packages">Discuss Packages</option>
         </select>
         <label for="message-content">Message:</label>
-        <textarea name="message-content" id="message-content" rows="10"
+        <textarea name="message-content" id="message-content" rows="10" 
         placeholder="Let us know how we can help.." required></textarea>
         <button class="std-btn" type="submit">Send Message</button>
       </form>
@@ -279,12 +284,12 @@
       <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
     </a>
     <div class="footer-socials">
-      <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+      <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" 
       aria-label="Link to Twitter page of Content Karma, (opens in a new
       window).">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"
+      <a href="https://facebook.com" target="_blank" rel="noopener noreferrer" 
       aria-label="Link to Facebook page of Content Karma, (opens in a new
       window).">
         <i class="fab fa-facebook"></i>
@@ -294,6 +299,9 @@
   </footer>
   <!-- Font Awesome Script -->
   <script src="https://kit.fontawesome.com/1b0e724256.js" crossorigin="anonymous"></script>
+  <!-- Credit: Javascript from w3schools tutorial - Scroll Back To Top Button:
+    https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
+  <script type="text/javascript" src="assets/scripts/script.js"></script>
 </body>
 
 </html>
