Refactor: Code formatting review

--- a/404.html
+++ b/404.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://ianmeigh.github.io/content-karma/assets/css/style.css" />
-  <link rel="shortcut icon" href="https://ianmeigh.github.io/content-karma/assets/images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://ianmeigh.github.io/content-karma/assets/images/favicon.ico"
+    type="image/x-icon">
   <title>Content Karma - Page Not Found</title>
 </head>
+
 <body>
   <section id="not-found">
     <img src="https://ianmeigh.github.io/content-karma/assets/images/page-not-found.svg" alt="">
@@ -17,4 +20,5 @@
     </a>
   </section>
 </body>
+
 </html>
