Fix: html validation warning
The type attribute had been used when importing a Javascript file but
is unnecessary.

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
   <script src="https://kit.fontawesome.com/1b0e724256.js" crossorigin="anonymous"></script>
   <!-- Credit: Javascript from w3schools tutorial - Scroll Back To Top Button:
     https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-  <script type="text/javascript" src="assets/scripts/script.js"></script>
+  <script src="assets/scripts/script.js"></script>
 </body>
 
 </html>
