Refactor: Correct grammatical problems

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <i class="fas fa-chevron-up"></i>
   </button>
   <section id="services">
-    <h2 class="section-heading">How we can help you?</h2>
+    <h2 class="section-heading">How can we help you?</h2>
     <div id="services-container" class="margin-bottom">
       <div class="service-item">
         <img class="service-item-img" src="assets/images/service-social.svg" alt="">
@@ -71,7 +71,7 @@
         <h3>Newsletters</h3>
         <p>
           One of the most effective tools in marketing, we curate content to
-          promote a specials offer or focus on a topic of interest to your
+          promote a special offer or focus on a topic of interest to your
           subscribers.
         </p>
       </div>
@@ -88,7 +88,7 @@
         <img class="service-item-img" src="assets/images/service-brand.svg" alt="">
         <h3>Brand Review</h3>
         <p>
-          We review all website copy and your content strategy to make a 6 month
+          We can review all website copy and your content strategy to make a 6 month
           action plan guaranteed to improve your SEO!
         </p>
       </div>
@@ -167,14 +167,14 @@
       </div>
       <div class="pricing-item pricing-item-emphasis">
         <div class="pricing-item-heading">
-          <span class="pricing-item-heading-title">Popular</span>
+          <span class="pricing-item-heading-title">Premium</span>
           <span class="pricing-item-heading-cost">£500</span>
         </div>
         <div class="pricing-item-details">
           <ul>
             <li>Development of a month-long content marketing plan</li>
             <li>4 x 500 word blog posts</li>
-            <li>unlimited revisions</li>
+            <li>Unlimited revisions</li>
             <li>4 hours of social engagement per post</li>
             <li>Search engine rank tracking</li>
             <li>Review meeting after each post to tailor future content</li>
@@ -183,7 +183,7 @@
       </div>
       <div class="pricing-item">
         <div class="pricing-item-heading">
-          <span class="pricing-item-heading-title">Brand</span>
+          <span class="pricing-item-heading-title">Branding</span>
           <span class="pricing-item-heading-cost">£250</span>
         </div>
         <div class="pricing-item-details">
