Refactor: Rename section links in nav
Remove -section from each linked section name. Missed for previous
issue fix.

fixes #1

--- a/why-invest.html
+++ b/why-invest.html
@@ -21,11 +21,11 @@
     </a>
     <nav id="navigation-container">
       <ul>
-        <li><a href="./#services-section">Services</a></li>
-        <li><a href="./#team-section">Team</a></li>
-        <li><a href="./#pricing-section">Pricing</a></li>
-        <li><a href="./#testimonials-section">Testimonials</a></li>
-        <li><a href="./#contact-section">Contact</a></li>
+        <li><a href="./#services">Services</a></li>
+        <li><a href="./#team">Team</a></li>
+        <li><a href="./#pricing">Pricing</a></li>
+        <li><a href="./#testimonials">Testimonials</a></li>
+        <li><a href="./#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
